fixed spacing between links on different screen sizes

--- a/styles/main.css
+++ b/styles/main.css
@@ -443,9 +443,17 @@ footer a {
 }
 
 @media screen and (min-width: 56em) and (max-width: 80em) {
+    .logo {
+        border-bottom: 1.2rem solid var(--bg-color-two);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border-top: 2rem solid var(--bg-color-two);
+        margin: -2rem 0 -2rem 2.5rem;
+        max-width: 16em;
+    }
 
     nav ul {
-        margin-left: 5.5rem;
+        margin-left: 2.5rem;
     }
 
     .nav-link {
